# forum

./: .gitignore
backend/: index.ts  package.json  passwd.ts  posts.json  users.json
cli/: Cargo.toml  conf.toml
cli/src/: main.rs
frontend/: index.html  login.html
msgpack-codec/: Cargo.toml
msgpack-codec/src/: lib.rs
server/: Cargo.toml  README.md  conf.toml
server/src/: main.rs  server.rs
tui/: build.zig  build.zig.zon
tui/src/: main.zig
webui/: index.html
