[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rmpv = "1.3.0"
tokio = { version = "1.47.1", features = ["full"] }
msgpack-codec = { path = "../msgpack-codec" }
tokio-util = { version = "0.7.16", features = ["codec", "rt"] }
tokio-stream = "0.1.17"
futures-util = "0.3.31"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
