[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
rmpv = "1.3.0"
tokio = { version = "1.47.1", features = ["full"] }
msgpack-codec = { path = "../msgpack-codec" }
tokio-util = { version = "0.7.16", features = ["codec", "rt"] }
tokio-stream = "0.1.17"
futures-util = "0.3.31"
toml = "0.9.8"
bcrypt = "0.17.1"
uuid = { version = "1.18.1", features = ["v7"] }
